# matching_resume_service

./: README.md  pyproject.toml
matching_resume_service/app/: Spacy_text_analayzer.py  pdf_reader.py  plotly_figures.py  run.py  scraping_linkedin.py  wordcloud_parameters.py
matching_resume_service/pdf_reader/: reader_pdf.py
